added the font faces segoe ui and Dosis to the project file.

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -31,7 +31,7 @@ $dark: #514A4A;
 $light: #CED2D2;
 
 .icon-font{
-    font-family: Dosis;
+    font-family: 'Dosis', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: var(--icon-font-size);
